# Programmeren_1

./: CMakeLists.txt
resources/: Lena_klein.txt
src/: functions.h  main.c
